--- a/TFM_tex/tfg.tex
+++ b/TFM_tex/tfg.tex
@@ -34,6 +34,8 @@
 \usepackage{amsfonts}
 \usepackage{mathabx}
 \usepackage{verbatim}
+\usepackage{longtable}
+
 \usepackage{pdfpages}
 \usepackage{soul}
 \usepackage[strict]{changepage}
